refactor(court): se elimino espacios y saltos de lineas innecesarios